# coursework_7

./: Dockerfile  README.md  del  django  docker-compose.yaml  env.simple  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py
